--- a/templates/main/includes/footer.html
+++ b/templates/main/includes/footer.html
@@ -1,6 +1,9 @@
 <footer
-          class="text-center text-lg-start text-white"
-          style="background-color: #3e4551"
+          class="footer"
+          style="background-color: #3e4551;
+                 position:relative!important;
+                 bottom:0%!important;
+                 width: 100%!important;"
           >
     <!-- Grid container -->
     <div class="container p-4 pb-0">
@@ -21,7 +24,7 @@
           </div>
           <!--Grid column-->
 
-          <!--Grid column-->
+          {% comment %} <!--Grid column-->
           <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Links</h5>
 
@@ -103,26 +106,13 @@
               </li>
             </ul>
           </div>
-          <!--Grid column-->
+          <!--Grid column--> {% endcomment %}
         </div>
         <!--Grid row-->
       </section>
       <!-- Section: Links -->
 
-      <hr class="mb-4" />
-
-      <!-- Section: CTA -->
-      <section class="">
-        <p class="d-flex justify-content-center align-items-center">
-          <span class="me-3">Register for free</span>
-          <button type="button" class="btn btn-outline-light btn-rounded">
-            Sign up!
-          </button>
-        </p>
-      </section>
-      <!-- Section: CTA -->
-
-      <hr class="mb-4" />
+ 
 
       <!-- Section: Social media -->
       <section class="mb-4 text-center">
