--- a/templates/base.html
+++ b/templates/base.html
@@ -8,16 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href={% static "css/style.css" %}>
     
-    <title>Django Tuto</title>
+    <title>Analyse Verbatims BPNord</title>
 </head>
 <body>
-    {% comment %} {% include "includes/header.html" %} {% endcomment %}
+    {% include "main/includes/header.html" %}
     <main>
         {% block content %}
         
         {% endblock content %}
     </main>
-    {% comment %} {% include "includes/footer.html" %} {% endcomment %}
+{% comment %} <img src={% static "img/logobpn.jpg" %} alt="Logo BPN"> {% endcomment %}
+{% comment %} <img width="100em" height="100em" src="https://media.licdn.com/dms/image/C560BAQFvC6yTQiWa0A/company-logo_200_200/0/1537768689243?e=1695254400&v=beta&t=IMHFE2PV974-a0pN81fjtFdJAVMy6Smbcd_wGEtFDrU" alt="Logo BPN"> {% endcomment %}
+
+    {% include "main/includes/footer.html" %}
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
